--- a/gtk/asset/assets-gtk3.svg.in
+++ b/gtk/asset/assets-gtk3.svg.in
@@ -3788,7 +3788,7 @@
          inkscape:connector-curvature="0"
          id="rect4140-62"
          d="m 19,494.36221 v 11.5 c 0,1.108 0.892,2 2,2 h 66 c 1.108,0 2,-0.892 2,-2 v -11.5 z"
-         style="opacity:1;fill:#2f3d44;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.3" />
+         style="opacity:1;fill:#121212;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.3" />
       <path
          inkscape:connector-curvature="0"
          id="text4161-9"
@@ -3822,7 +3822,7 @@
       <path
          id="rect4140-6-9"
          d="m 19,494.36221 v -11.5 c 0,-1.108 0.892,-2 2,-2 h 66 c 1.108,0 2,0.892 2,2 v 11.5 z"
-         style="opacity:1;fill:#2f3d44;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.3"
+         style="opacity:1;fill:#121212;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.3"
          inkscape:connector-curvature="0" />
       <path
          inkscape:connector-curvature="0"
