--- a/gtk/gtk-2.0/colors-dark.rc.in
+++ b/gtk/gtk-2.0/colors-dark.rc.in
@@ -1,7 +1,7 @@
 #
 # Colour scheme
 #
-gtk-color-scheme = "base_color:#29353B\nbg_color:#263238"
+gtk-color-scheme = "base_color:#010101\nbg_color:#000000"
 gtk-color-scheme = "text_color:#CFD8DC\nfg_color:#CFD8DC"
 gtk-color-scheme = "selected_bg_color:#00BCD4\nselected_fg_color:#FFFFFF"
 gtk-color-scheme = "tooltip_bg_color:#222D32\ntooltip_fg_color:#CFD8DC"
@@ -12,7 +12,7 @@ gtk-color-scheme = "panel_bg_color:#13191C"
 gtk-color-scheme = "secondary_dark_color:#243035"
 gtk-color-scheme = "solid_white:#FFFFFF"
 gtk-color-scheme = "accent_color:#4DB6AC"
-gtk-color-scheme = "light_color:#2F3D44"
+gtk-color-scheme = "light_color:#090909"
 
 
 #
