feat(colors): replaced adapta colors with black palette

--- a/gtk/asset/assets-gtk3.svg.in
+++ b/gtk/asset/assets-gtk3.svg.in
@@ -2924,7 +2924,7 @@
            height="40"
            width="40"
            id="use4532"
-           style="fill:#29353b;fill-opacity:1;stroke:none" />
+           style="fill:#323232;fill-opacity:1;stroke:none" />
       </g>
       <rect
          ry="3"
@@ -3673,7 +3673,7 @@
        id="checkbox-unchecked-solid-dark"
        inkscape:label="#g4632"
        transform="matrix(1.2820582,0,0,1.2820791,136.79413,-174.14493)"
-       style="opacity:1;fill:#29353b;stroke:#cfd8dc;stroke-width:1.59975839;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;fill-opacity:1">
+       style="opacity:1;fill:#323232;stroke:#cfd8dc;stroke-width:1.59975839;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;fill-opacity:1">
       <rect
          ry="0.99999738"
          rx="0.99999738"
@@ -3682,13 +3682,13 @@
          height="14"
          width="14"
          id="rect4505-8-0-0-4"
-         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.59975839;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.59975839;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
     </g>
     <g
        id="checkbox-unchecked-solid-insensitive-dark"
        inkscape:label="#g4632"
        transform="matrix(1.2820582,0,0,1.2820791,161.79413,-174.14493)"
-       style="opacity:1;fill:#29353b;stroke:#cfd8dc;stroke-width:1.59982836;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.30000001;fill-opacity:1">
+       style="opacity:1;fill:#323232;stroke:#cfd8dc;stroke-width:1.59982836;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.30000001;fill-opacity:1">
       <rect
          ry="0.99999738"
          rx="0.99999738"
@@ -3697,31 +3697,31 @@
          height="14"
          width="14"
          id="rect4505-8-6-1-3"
-         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.59982836;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.59982836;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
     </g>
     <g
        id="radio-unchecked-solid-dark"
        inkscape:label="#g4650"
        transform="matrix(1.2828819,0,0,1.2829081,136.71165,-195.87474)"
-       style="opacity:1;fill:#29353b;stroke:#cfd8dc;stroke-width:1.58961654;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;fill-opacity:1">
+       style="opacity:1;fill:#323232;stroke:#cfd8dc;stroke-width:1.58961654;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;fill-opacity:1">
       <circle
          r="7"
          cy="692.36218"
          cx="100"
          id="path4507-2-6-3-7"
-         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.58961654;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.58961654;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
     </g>
     <g
        id="radio-unchecked-solid-insensitive-dark"
        inkscape:label="#g4650"
        transform="matrix(1.2828819,0,0,1.2829081,161.71165,-195.87474)"
-       style="opacity:1;stroke:#cfd8dc;stroke-width:1.58961654;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.28;fill:#29353b;fill-opacity:1">
+       style="opacity:1;stroke:#cfd8dc;stroke-width:1.58961654;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.28;fill:#323232;fill-opacity:1">
       <circle
          r="7"
          cy="692.36218"
          cx="100"
          id="path4507-2-8-0-6"
-         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.58961654;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+         style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#cfd8dc;stroke-width:1.58961654;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
     </g>
     <g
        transform="translate(225,1.4065552e-4)"
@@ -4031,7 +4031,7 @@
              cy="692.36218"
              cx="100"
              id="path4507-2-82-4-1-29"
-             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
         </g>
         <g
            id="radio-unchecked-6-6-5-1-3"
@@ -4068,7 +4068,7 @@
              cy="692.36218"
              cx="100"
              id="path4507-2-82-4-1-2-5"
-             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28000004;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28000004;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
         </g>
         <g
            id="radio-unchecked-6-6-5-1-8-0"
@@ -4166,7 +4166,7 @@
        id="radio-mixed-solid-dark"
        inkscape:label="#g2639">
       <g
-         style="fill:#29353b;fill-opacity:1"
+         style="fill:#323232;fill-opacity:1"
          inkscape:label="#g5147"
          id="g5147"
          transform="translate(225,4.9179462e-6)">
@@ -4174,24 +4174,24 @@
            id="radio-unchecked-6-41-9-8-52"
            inkscape:label="#g4650"
            transform="matrix(1.2828819,0,0,1.2829081,-88.28835,-145.87488)"
-           style="opacity:1;fill:#29353b;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1">
+           style="opacity:1;fill:#323232;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1">
           <circle
              r="7"
              cy="692.36218"
              cx="100"
              id="path4507-2-82-2-7-7-5"
-             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
         </g>
         <g
            id="radio-unchecked-6-6-2-4-8-4"
            inkscape:label="#g4650"
            transform="matrix(1.2828819,0,0,1.2829081,-88.28835,-145.87488)"
-           style="opacity:1;fill:#29353b;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+           style="opacity:1;fill:#323232;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
         <g
            id="radio-unchecked-6-6-2-4-3-2-4"
            inkscape:label="#g4650"
            transform="matrix(1.2828819,0,0,1.2829081,-88.28835,-145.87488)"
-           style="opacity:1;fill:#29353b;fill-opacity:1;stroke:#ffffff;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.2" />
+           style="opacity:1;fill:#323232;fill-opacity:1;stroke:#ffffff;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.2" />
       </g>
       <rect
          y="741.36218"
@@ -4206,7 +4206,7 @@
        id="radio-mixed-solid-insensitive-dark"
        inkscape:label="#g2639">
       <g
-         style="fill:#29353b;fill-opacity:1"
+         style="fill:#323232;fill-opacity:1"
          inkscape:label="#g5147"
          id="g5147-0"
          transform="translate(225,4.9179462e-6)">
@@ -4214,24 +4214,24 @@
            id="radio-unchecked-6-41-9-8-52-7"
            inkscape:label="#g4650"
            transform="matrix(1.2828819,0,0,1.2829081,-88.28835,-145.87488)"
-           style="opacity:1;fill:#29353b;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1">
+           style="opacity:1;fill:#323232;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1">
           <circle
              r="7"
              cy="692.36218"
              cx="100"
              id="path4507-2-82-2-7-7-5-8"
-             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#29353b;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
+             style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#323232;fill-opacity:1;fill-rule:nonzero;stroke:#00BCD4;stroke-width:1.58937407;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.28;marker:none;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
         </g>
         <g
            id="radio-unchecked-6-6-2-4-8-4-6"
            inkscape:label="#g4650"
            transform="matrix(1.2828819,0,0,1.2829081,-88.28835,-145.87488)"
-           style="opacity:1;fill:#29353b;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+           style="opacity:1;fill:#323232;fill-opacity:1;stroke:#00BCD4;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
         <g
            id="radio-unchecked-6-6-2-4-3-2-4-8"
            inkscape:label="#g4650"
            transform="matrix(1.2828819,0,0,1.2829081,-88.28835,-145.87488)"
-           style="opacity:1;fill:#29353b;fill-opacity:1;stroke:#ffffff;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.2" />
+           style="opacity:1;fill:#323232;fill-opacity:1;stroke:#ffffff;stroke-width:1.58937407;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.2" />
       </g>
       <rect
          y="741.36218"
