--- a/gtk/asset/assets-gtk2.svg.in
+++ b/gtk/asset/assets-gtk2.svg.in
@@ -7620,22 +7620,22 @@
        id="Scrollbars_h-trough-dark"
        inkscape:label="#g4339"
        transform="translate(226,526.36222)"
-       style="fill:#29353b;fill-opacity:1">
+       style="fill:#323232;fill-opacity:1">
       <rect
          y="110"
          x="6"
          height="16"
          width="18"
          id="rect4224-2"
-         style="opacity:1;fill:#29353b;fill-opacity:1;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none" />
+         style="opacity:1;fill:#323232;fill-opacity:1;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none" />
     </g>
     <g
        id="Scrollbars_v-trough-insensitive-dark"
        inkscape:label="#g4375"
        transform="translate(159,413.36222)"
-       style="fill:#29353b;fill-opacity:1">
+       style="fill:#323232;fill-opacity:1">
       <rect
-         style="opacity:1;fill:#29353b;fill-opacity:1;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none"
+         style="opacity:1;fill:#323232;fill-opacity:1;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none"
          id="use4552-3"
          width="18"
          height="16"
@@ -7647,9 +7647,9 @@
        id="Scrollbars_v-trough-dark"
        inkscape:label="#g4375"
        transform="translate(159,391.36222)"
-       style="fill:#29353b;fill-opacity:1">
+       style="fill:#323232;fill-opacity:1">
       <rect
-         style="opacity:1;fill:#29353b;fill-opacity:1;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none"
+         style="opacity:1;fill:#323232;fill-opacity:1;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none"
          id="use4552-9-8"
          width="18"
          height="16"
@@ -8097,7 +8097,7 @@
          height="2"
          width="2"
          id="rect3757-0-1"
-         style="fill:#29353b;fill-opacity:1;stroke:none" />
+         style="fill:#323232;fill-opacity:1;stroke:none" />
     </g>
     <g
        transform="translate(160,80.000004)"
@@ -8154,7 +8154,7 @@
          height="2"
          width="2"
          id="rect3757-29-4"
-         style="fill:#29353b;fill-opacity:1;stroke:none" />
+         style="fill:#323232;fill-opacity:1;stroke:none" />
     </g>
     <rect
        style="fill:none;stroke:#263238;stroke-width:2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.2"
